add logging, refactor code, fully test ProductService